# lottery

./: .gitignore  Lottery-Diagram.drawio  Makefile  README.md  docker-compose.nfc.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  lottery.drawio  lottery_diagram.drawio  package-lock.json  studentId.py  test.py
.docker/: api.Dockerfile  go.Dockerfile
.github/: issue_template.md  pull_request_template.md
Fast-API/: auth.py  controllers.py  create_table.py  crud.py  database.py  db.py  db.sqlite3  main.py  models.py  notifier.py  run.py  schemas.py  stickee.db  urls.py
Flask-API/: run.py
api/: .air.toml  backup.py  create_table.py  crud.py  database.py  go.mod  go.sum  main.go  main.py  models.py  notifier.py  pyproject.toml  schemas.py
api/cmd/: initdb.go  seed.go
api/docs/: docs.go  swagger.yaml
api/domain/: user.go
api/infrastructure/: admin.go  db.go  event.go  event_user.go  user.go  winner.go
api/interfaces/: admin_controller.go  event_controller.go  event_users_controler.go  user_controller.go  winner_controller.go
api/static/css/: custom.css  message-custom-lottery.css  message-custom.css
api/static/js/: websocket.js
api/templates/: error.html  index.html  layout.html  message.html  place.html  random.html  random_before.html  winner.html
api/usecase/: admin_usecase.go  event_usecase.go  event_users_usecase.go  user_usecase.go  winner_usecase.go
nfc/: README.md  dump.py  main.py  poetry.toml  pyproject.toml  readic.py  readic_nonfc_test.py  studentId.py  test_dump_ic.py  test_read_stid.py  test_ws_client.py
(+268 files in other folders)
