[tool.poetry]
name = "lottery_api"
version = "0.1.0"
description = "学籍番号抽会API"
authors = ["TsubasaOura"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"