[tool.poetry]
name = "nfc"
version = "0.1.0"
description = ""
authors = ["TsubasaOura"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.3"
requests = "^2.28.1"
nfcpy = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
